Api consumida, falta mostrar resultados

--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,7 @@ label {
 }
 
 input[type='text'] {
-  all: unset;
-  width: 95%;
+  width: 100%;
   background-color: #FFFFFF;
   padding: 1rem;
   margin-top: 1rem;
@@ -69,7 +68,6 @@ select {
 }
 
 input[type='submit'] {
-  all: unset;
   width: 100%;
   background-color: #100e1d;
   padding: 1rem;
@@ -78,7 +76,7 @@ input[type='submit'] {
   text-align: center;
   text-transform: uppercase;
   font-weight: 700;
-  margin-top: 3rem;
+  margin-top: 4rem;
   border-radius: .5rem;
   cursor: pointer;
 }
@@ -89,4 +87,15 @@ input[type='submit'] {
   text-align: center;
   font-weight: 900;
   text-transform: uppercase;
+}
+
+.contenedor__resultado {
+  width: 80%;
+  margin: 20rem auto;
+  background-color: #1e213a;
+  height: 50%;
+}
+
+.heading {
+  margin-top: 5rem;
 }
