--- a/src/index.css
+++ b/src/index.css
@@ -92,10 +92,80 @@ input[type='submit'] {
 .contenedor__resultado {
   width: 80%;
   margin: 20rem auto;
+  padding: 3rem 5rem;
   background-color: #1e213a;
-  height: 50%;
+  min-height: 50%;
 }
 
 .heading {
   margin-top: 5rem;
+  margin-bottom: 3rem;
+}
+
+.resultado__grid {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+}
+
+.resultado__imagen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.resultado__imagen img {
+  width: 20rem;
+}
+
+.resultado__imagen p {
+  color: #FFFFFF;
+  font-size: 4.5rem;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.resultado__valores {
+  text-align: center;
+  color: #FFFFFF;
+  font-size: 3rem;
+}
+
+.span_valores{
+  font-size: 3rem;
+  vertical-align: top;
+}
+
+h2 {
+  margin-top: 7rem;
+  font-weight: 900;
+  font-size: 6rem;
+}
+
+.valores__flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.valores__flex p {
+  font-size: 3rem;
+}
+.categoria {
+  font-weight: 900;
+  font-size: 4rem;
+  display: block;
+  margin-bottom: .5rem;
+}
+
+.grados {
+  font-size: 2rem;
+  vertical-align:top;
+}
+
+.error {
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: 900;
+  font-size: 4rem;
+  text-transform: uppercase;
 }
