--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
   font-weight: 900;
-  margin-top: 12rem;
+  margin-top: 3rem;
   margin-bottom: 5rem;
   font-size: 4rem;
   text-transform: uppercase;
@@ -35,8 +35,18 @@ h1 {
 
 .izquierdo {
   padding: 5rem;
-  height: 100vh;
   background-color: #1e213a;
+  height: 59rem;
+}
+
+@media (min-width: 768px){
+  .izquierdo {
+    height: 100vh;
+  } 
+
+  .izquierdo h1 {
+    margin-top: 12rem;
+  }
 }
 
 label {
@@ -91,10 +101,16 @@ input[type='submit'] {
 
 .contenedor__resultado {
   width: 80%;
-  margin: 20rem auto;
   padding: 3rem 5rem;
+  margin: 5rem auto;
   background-color: #1e213a;
   min-height: 50%;
+}
+
+@media (min-width: 768px){
+  .contenedor__resultado {
+    margin: 20rem auto;
+  }
 }
 
 .heading {
@@ -104,7 +120,13 @@ input[type='submit'] {
 
 .resultado__grid {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+
+}
+
+@media (min-width: 768px){
+  .resultado__grid {
+    grid-template-columns: repeat(2,1fr);
+  }
 }
 
 .resultado__imagen {
@@ -136,9 +158,14 @@ input[type='submit'] {
 }
 
 h2 {
-  margin-top: 7rem;
   font-weight: 900;
   font-size: 6rem;
+}
+
+@media (min-width: 768px){
+  h2 {
+    margin-top: 7rem;
+  }
 }
 
 .valores__flex {
